# automake uses this file to generate Makefile.in

EXTRA_DIST = \
 CharIndexed.java \
 CharIndexedCharArray.java \
 CharIndexedInputStream.java \
 CharIndexedString.java \
 CharIndexedStringBuffer.java \
 RE.java \
 REException.java \
 REFilterInputStream.java \
 REMatch.java \
 REMatchEnumeration.java \
 RESyntax.java \
 REToken.java \
 RETokenAny.java \
 RETokenBackRef.java \
 RETokenChar.java \
 RETokenEnd.java \
 RETokenEndSub.java \
 RETokenOneOf.java \
 RETokenPOSIX.java \
 RETokenRange.java \
 RETokenRepeated.java \
 RETokenStart.java \
 RETokenWordBoundary.java \
 UncheckedRE.java
